--- a/assets/misc/style.css
+++ b/assets/misc/style.css
@@ -2,6 +2,7 @@ html {
     background-color: #101010; 
     color: #FFFFFF; 
     font-family: serif;
+    display: flex;
     justify-content: center;
 }
 .title {
