--- a/assets/misc/style.css
+++ b/assets/misc/style.css
@@ -1,6 +1,6 @@
 html {
     /*background-color: #101099;*/
-    background-image: url("dfbadbffbdbdfdbsfsfbdsdfbg.webp")
+    background-image: url("dfbadbffbdbdfdbsfsfbdsdfbg.webp");
     color: #FFFFFF; 
     font-family: serif;
     display: flex;
