--- a/assets/misc/style.css
+++ b/assets/misc/style.css
@@ -1,6 +1,6 @@
 html {
     /*background-color: #101099;*/
-    background-image: url("dfbadbffbdbdfdbsfsfbdsdfbg.png");
+    background-image: url("https://sobaht.ml/dfbadbffbdbdfdbsfsfbdsdfbg.png");
     color: #FFFFFF; 
     font-family: serif;
     display: flex;
