--- a/assets/misc/style.css
+++ b/assets/misc/style.css
@@ -1,7 +1,7 @@
 html {
     /*background-color: #101099;*/
     background-image: url("https://sobaht.ml/dfbadbffbdbdfdbsfsfbdsdfbg.png");
-    color: #FFFFFF; 
+    /*color: #FFFFFF;*/ 
     font-family: serif;
     display: flex;
     flex-direction: column;
