--- a/assets/misc/style.css
+++ b/assets/misc/style.css
@@ -1,6 +1,7 @@
 html {
     background-color: #101010;
     /*background-image: url("https://sobaht.ml/dfbadbffbdbdfdbsfsfbdsdfbg.png");*/ 
+    color: white;
     font-family: serif;
     display: flex;
     flex-direction: column;
