modified:   assets/misc/index.html modified:   assets/misc/style.css

--- a/assets/misc/style.css
+++ b/assets/misc/style.css
@@ -1,6 +1,6 @@
 html {
     background-color: #101010;
-    /*background-image: url("https://sobaht.ml/dfbadbffbdbdfdbsfsfbdsdfbg.png");*/ 
+    /*background-image: url("https://so.bang.cl/dfbadbffbdbdfdbsfsfbdsdfbg.png");*/ 
     color: white;
     font-family: serif;
     display: flex;
