--- a/assets/misc/style.css
+++ b/assets/misc/style.css
@@ -15,7 +15,7 @@ html {
     text-decoration-style: dotted
 }
 .txt1:hover {
-    transition: text-decoration-color 0.25s;
+    transition: 150ms ease-out;
     text-decoration-color: red
 }
 .point {
