modified:   .gitignore 	modified:   assets/misc/index.html 	modified:   assets/misc/style.css 	modified:   index.html

--- a/assets/misc/style.css
+++ b/assets/misc/style.css
@@ -48,3 +48,14 @@ html {
 big {
     overflow-wrap: anywhere
 }
+.b00bsty-ex {
+    color: var(--grey1);
+    text-decoration-color: var(--grey1);
+    text-decoration-line: underline;
+    text-decoration-style: dotted;
+    transition: var(--easeout1)
+}
+.b00bsty-ex:hover {
+    transition: var(--easeout1);
+    text-decoration-color: yellow
+}
