--- a/assets/misc/style.css
+++ b/assets/misc/style.css
@@ -37,6 +37,7 @@ a[title]:focus:after {
     box-shadow: 1px 1px 5px 0 rgba(0, 0, 0, 0.4);
     font-size: 14px;
     padding: 3px 5px;
+    transition: var(--easeout2)
 }
 
 .txt1 {
